--- a/index.html
+++ b/index.html
@@ -1,1 +1,96 @@
+<!DOCTYPE html>
+<head>
+	<title>Wikimedia</title>
+	<link rel="stylesheet" type="text/css" href="styles.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+</head>
+<body>
+<div class="container">
+	<div class="welcome">
+		<p class="bigWelcome">Welcome to Wikimedia.</p>
+		<p class="footnote">
+		"Imagine a world in which every single human being can freely share in the sum of all knowledge."</p>
+		<p class="footnote"> That's our commitment.</p>
+	</div>
+	<div class="intro">
+		<p>Wikimedia is a global 
+		<a href="http://meta.wikimedia.org/wiki/Wikimedia_movement">
+		movement</a> whose <a href="http://wikimediafoundation.org/wiki/Mission_statement">mission</a> is to bring free educational content to the world.</p>
+		<p>Through various 
+		<a href="http://wikimediafoundation.org/wiki/Our_projects">projects</a>, <a href="http://meta.wikimedia.org/wiki/Wikimedia_chapters">chapters</a>, and the support structure of the non-profit Wikimedia Foundation, Wikimedia <a href="http://wikimediafoundation.org/wiki/Vision"> strives</a> to bring about a world in which every single human being can freely share in the sum of all knowledge.</p>
+	</div>
+	<table class="content">
+	<tbody>
+	<tr>
+		<td colspan="4">
+		<tr>
+
+		<td>
+			<a href="http://www.wikipedia.org/" title="Wikipedia - The free encyclopedia">
+				<img src="http://upload.wikimedia.org/wikipedia/en/b/bc/Wiki.png" width="135" height="155">
+				</a>
+				</td>
+		<td>
+			<a href="//www.wiktionary.org/" title="Wiktionary — The free dictionary"><img src="http://upload.wikimedia.org/wikipedia/commons/thumb/f/f8/Wiktionary-logo-en.svg/135px-Wiktionary-logo-en.svg.png" width="135" height="135" alt="Wiktionary — The free dictionary"></a>
+			</td>
+		<td>
+				<a href="//www.wikiquote.org/" title="Wikiquote — Collection of quotations"><img src="http://upload.wikimedia.org/wikipedia/commons/thumb/1/1a/Wikiquote-logo-en.png/120px-Wikiquote-logo-en.png" width="120" height="120" alt="Wikiquote"></a>
+		</td>
+		<td>
+			<a href="//www.wikibooks.org/" title="Wikibooks — Open-content textbooks"><img src="http://upload.wikimedia.org/wikipedia/commons/thumb/f/fa/Wikibooks-logo-en-noslogan.svg/140px-Wikibooks-logo-en-noslogan.svg.png" width="140" height="140" alt="Wikibooks"></a>
+		</td>
+	<tr>
+		<td>
+			<a href="//www.wikinews.org/" title="Wikinews — Free content news source"><img src="http://upload.wikimedia.org/wikinews/en/b/bc/Wiki.png" width="135" height="104" alt="Wikinews"></a>
+		</td>
+		<td>
+			<a href="//wikisource.org/" title="Wikisource — The free library"><img src="http://upload.wikimedia.org/wikipedia/sources/b/bc/Wiki.png" alt="Wikisource"></a>
+		</td>
+		<td>
+			<a href="//www.wikiversity.org/" title="Wikiversity — Open learning community"><img src="http://upload.wikimedia.org/wikiversity/en/b/bc/Wiki.png" width="135" height="119" alt="Wikiversity"></a>
+		</td>
+		<td>
+			<a href="//species.wikimedia.org/" title="Wikispecies — The free species directory"><img src="http://upload.wikimedia.org/wikipedia/species/b/bc/Wiki.png" width="125" height="177" alt="Wikispecies — The free species directory"></a>
+		</td>
+	<tr>
+		<td>
+			<a href="//www.mediawiki.org/" title="MediaWiki software documentation"><img src="http://upload.wikimedia.org/wikipedia/mediawiki/b/bc/Wiki.png" alt="MediaWiki"></a>
+		</td>
+		<td>
+			<a href="//www.wikidata.org/" title="Wikidata — The free knowledge base"><img src="http://upload.wikimedia.org/wikipedia/commons/e/e4/Wikidata-logo-en-135px.png" alt="Wikidata"></a>
+		</td>
+		<td>
+			<a href="//commons.wikimedia.org/" title="Wikimedia Commons — Shared media repository"><img src="http://upload.wikimedia.org/wikipedia/commons/7/79/Wiki-commons.png" width="135" height="155" alt="Wikimedia Commons"></a>
+		</td>
+		<td>	
+			<a href="//www.wikivoyage.org/" title="Wikivoyage — The free, worldwide travel guide"><img src="http://upload.wikimedia.org/wikipedia/commons/thumb/d/d1/Wikivoyage-Logo-v3-en.svg/135px-Wikivoyage-Logo-v3-en.svg.png" alt="Wikivoyage"></a>
+		</td>
+	<tr>
+		<td>
+			<a href="//meta.wikimedia.org/" title="Meta-Wiki — Wikimedia project coordination"><img src="http://upload.wikimedia.org/wikipedia/meta/b/bc/Wiki.png" alt="Meta-Wiki"></a>
+		</td>
+		<td>
+			<a href="//incubator.wikimedia.org/" title="Wikimedia Incubator — For language versions in development"><img src="http://upload.wikimedia.org/wikipedia/incubator/b/bc/Wiki.png" alt="Wikimedia Incubator"></a>
+		</td>
+		<td>
+			<a href="//wikitech.wikimedia.org/" title="Wikitech and Wikimedia Labs"><img src="http://wikitech.wikimedia.org/w/images/c/cf/Labslogo_thumb.png" alt="Wikitech and Wikimedia Labs"></a>
+		</td>
+		<td>
+			<a href="//wikimediafoundation.org/" title="Wikimedia Foundation public relations"><img src="http://upload.wikimedia.org/wikipedia/commons/thumb/c/c4/Wikimedia_Foundation_RGB_logo_with_text.svg/135px-Wikimedia_Foundation_RGB_logo_with_text.svg.png" alt="Wikimedia Foundation"></a>
+		</td>
+		</tr>
+		</tbody>
+</table>
+</body>
+
+<footer>
+<div class="footer">
+	<p>
+		<a href="http://wikimediafoundation.org/wiki/Terms_of_Use">Terms of Use</a> | 
+		<a href="http://wikimediafoundation.org/wiki/Privacy_policy">Privacy Policy</a>
+	</p>
+</div>
+</footer>
+</div>
+</html>
 
